[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "deleaker"
version = "0.1.0"
description = "Attention rewriting for FLUX to reduce semantic leakage between entities."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "tokeron" }]
dependencies = [
    "torch>=2.0",
    "diffusers>=0.30",
    "transformers>=4.45",
    "accelerate>=0.30",
    "huggingface_hub>=0.26",
    "safetensors>=0.4.1",
    "sentencepiece",
    "protobuf",
    "pillow",
    "numpy",
    "opencv-python-headless",
]

[project.optional-dependencies]
examples = ["datasets>=2.20"]

[tool.setuptools.packages.find]
include = ["deleaker*"]
