[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "deleaker"
version = "0.1.0"
description = "Attention rewriting for FLUX to reduce semantic leakage between entities."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "tokeron" }]
dependencies = [
    "torch>=2.4,<2.8",
    "diffusers>=0.30,<0.34",
    "transformers>=4.45,<5.0",
    "accelerate>=0.30,<2.0",
    "huggingface_hub>=0.26,<1.0",
    "safetensors>=0.4.1,<0.6",
    "sentencepiece",
    "protobuf",
    "pillow",
    "numpy<2.5",
    "opencv-python-headless",
]

[project.optional-dependencies]
examples = ["datasets>=2.20"]

[tool.setuptools.packages.find]
include = ["deleaker*"]
